src/CppParser.java
// Generated from ./src/Cpp.g4 by ANTLR 4.13.1

import java.lang.Math;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CppParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VOLATILE=1, CONTINUE=2, TYPEDEF=3, STRUCT=4, STATIC=5, DOUBLE=6, INLINE=7, 
		RETURN=8, FLOAT=9, CLASS=10, WHILE=11, CONST=12, BREAK=13, AUTO=14, VOID=15, 
		CHAR=16, LONG=17, GOTO=18, ELSE=19, INT=20, FOR=21, DO=22, IF=23, LITERAL=24, 
		VALID_NAME=25, NUMBER=26, INCR=27, DECR=28, ARROW=29, NE=30, PLUSA=31, 
		MUNUSA=32, MULTA=33, DIVA=34, MODA=35, NGR=36, NLS=37, AND=38, OR=39, 
		EQ=40, MULT=41, NOT=42, DIV=43, MOD=44, PLUS=45, MINUS=46, GR=47, LS=48, 
		ASSING=49, AMPER=50, ZAP=51, PZAP=52, LPAREL=53, RPAREL=54, LBOX=55, RBOX=56, 
		LFIGURE=57, RFIGURE=58, DOT=59, SPACE=60;
	public static final int
		RULE_program = 0, RULE_outer_statement_list = 1, RULE_outer_statement = 2, 
		RULE_function_statement = 3, RULE_statement_list = 4, RULE_statement = 5, 
		RULE_selection_statement = 6, RULE_block_statement = 7, RULE_expression_statement = 8, 
		RULE_iteration_statement = 9, RULE_jump_statement = 10, RULE_declaration_statement = 11, 
		RULE_init_declarator_list = 12, RULE_init_declarator = 13, RULE_declarator = 14, 
		RULE_direct_declarator = 15, RULE_parameter_list = 16, RULE_parameter_declaration = 17, 
		RULE_initializer = 18, RULE_initializer_list = 19, RULE_pointer = 20, 
		RULE_type_qualifier_list = 21, RULE_declaration_specifiers = 22, RULE_type_qualifier = 23, 
		RULE_function_specifier = 24, RULE_type_specifier = 25, RULE_storage_class_specifier = 26, 
		RULE_expression = 27, RULE_assigment_expression = 28, RULE_logical_or_expression = 29, 
		RULE_logical_and_expression = 30, RULE_equality_expression = 31, RULE_relational_expression = 32, 
		RULE_additive_expression = 33, RULE_multiplicative_expression = 34, RULE_unary_expression = 35, 
		RULE_postfix_expression = 36, RULE_primary_expression = 37, RULE_constant = 38, 
		RULE_floating_constant = 39, RULE_character_constant = 40, RULE_integer_constant = 41, 
		RULE_identifier = 42, RULE_argument_expression_list = 43, RULE_argument_expression = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "outer_statement_list", "outer_statement", "function_statement", 
			"statement_list", "statement", "selection_statement", "block_statement", 
			"expression_statement", "iteration_statement", "jump_statement", "declaration_statement", 
			"init_declarator_list", "init_declarator", "declarator", "direct_declarator", 
			"parameter_list", "parameter_declaration", "initializer", "initializer_list", 
			"pointer", "type_qualifier_list", "declaration_specifiers", "type_qualifier", 
			"function_specifier", "type_specifier", "storage_class_specifier", "expression", 
			"assigment_expression", "logical_or_expression", "logical_and_expression", 
			"equality_expression", "relational_expression", "additive_expression", 
			"multiplicative_expression", "unary_expression", "postfix_expression", 
			"primary_expression", "constant", "floating_constant", "character_constant", 
			"integer_constant", "identifier", "argument_expression_list", "argument_expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'volatile'", "'continue'", "'typedef'", "'struct'", "'static'", 
			"'double'", "'inline'", "'return'", "'float'", "'class'", "'while'", 
			"'const'", "'break'", "'auto'", "'void'", "'char'", "'long'", "'goto'", 
			"'else'", "'int'", "'for'", "'do'", "'if'", null, null, null, "'++'", 
			"'--'", "'->'", "'!='", "'+='", "'-='", "'*='", "'/='", "'%='", "'<='", 
			"'>='", "'&&'", "'||'", "'=='", "'*'", "'!'", "'/'", "'%'", "'+'", "'-'", 
			"'>'", "'<'", "'='", "'&'", "','", "';'", "'('", "')'", "'['", "']'", 
			"'{'", "'}'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VOLATILE", "CONTINUE", "TYPEDEF", "STRUCT", "STATIC", "DOUBLE", 
			"INLINE", "RETURN", "FLOAT", "CLASS", "WHILE", "CONST", "BREAK", "AUTO", 
			"VOID", "CHAR", "LONG", "GOTO", "ELSE", "INT", "FOR", "DO", "IF", "LITERAL", 
			"VALID_NAME", "NUMBER", "INCR", "DECR", "ARROW", "NE", "PLUSA", "MUNUSA", 
			"MULTA", "DIVA", "MODA", "NGR", "NLS", "AND", "OR", "EQ", "MULT", "NOT", 
			"DIV", "MOD", "PLUS", "MINUS", "GR", "LS", "ASSING", "AMPER", "ZAP", 
			"PZAP", "LPAREL", "RPAREL", "LBOX", "RBOX", "LFIGURE", "RFIGURE", "DOT", 
			"SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cpp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CppParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public String code;
		public Outer_statement_listContext outer_statement_list;
		public Outer_statement_listContext outer_statement_list() {
			return getRuleContext(Outer_statement_listContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CppParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CppListener ) ((CppListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CppListener ) ((CppListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			((ProgramContext)_localctx).outer_statement_list = outer_statement_list(0);
			 ((ProgramContext)_localctx).code =  ((ProgramContext)_localctx).outer_statement_list.code; 
			setState(92);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Outer_statement_listContext extends ParserRuleContext {
		public int indent;
		public String code;
		public Outer_statementContext outer_statement;
		public Outer_statement_listContext outer_statement_list;
		public Outer_statementContext outer_statement() {
			return getRuleContext(Outer_statementContext.class,0);
		}
		public Outer_statement_listContext outer_statement_list() {
			return getRuleContext(Outer_statement_listContext.class,0);
		}
		public Outer_statement_listContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Outer_statement_listContext(ParserRuleContext parent, int invokingState, int indent) {
			super(parent, invokingState);
			this.indent = indent;
		}
		@Override public int getRuleIndex() { return RULE_outer_statement_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CppListener ) ((CppListener)listener).enterOuter_statement_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CppListener ) ((CppListener)listener).exitOuter_statement_list(this);
		}
	}

	public final Outer_statement_listContext outer_statement_list(int indent) throws RecognitionException {
		Outer_statement_listContext _localctx = new Outer_statement_listContext(_ctx, getState(), indent);
		enterRule(_localctx, 2, RULE_outer_statement_list);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				((Outer_statement_listContext)_localctx).outer_statement = outer_statement(indent);
				 ((Outer_statement_listContext)_localctx).code =  ((Outer_statement_listContext)_localctx).outer_statement.code + '\n'; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				((Outer_statement_listContext)_localctx).outer_statement = outer_statement(indent);
				setState(98);
				((Outer_statement_listContext)_localctx).outer_statement_list = outer_statement_list(indent);
				 ((Outer_statement_listContext)_localctx).code =  ((Outer_statement_listContext)_localctx).outer_statement.code + '\n' + ((Outer_statement_listContext)_localctx).outer_statement_list.code; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Outer_statementContext extends ParserRuleContext {
		public int indent;
		public String code;
		public Declaration_statementContext declaration_statement;
		public Function_statementContext function_statement;
		public Declaration_statementContext declaration_statement() {
			return getRuleContext(Declaration_statementContext.class,0);
		}
		public Function_statementContext function_statement() {
			return getRuleContext(Function_statementContext.class,0);
		}
		public Outer_statementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Outer_statementContext(ParserRuleContext parent, int invokingState, int indent) {
			super(parent, invokingState);
			this.indent = indent;
		}
		@Override public int getRuleIndex() { return RULE_outer_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CppListener ) ((CppListener)listener).enterOuter_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CppListener ) ((CppListener)listener).exitOuter_statement(this);
		}
	}

	public final Outer_statementContext outer_statement(int indent) throws RecognitionException {
		Outer_statementContext _localctx = new Outer_statementContext(_ctx, getState(), indent);
		enterRule(_localctx, 4, RULE_outer_statement);

		        String TAB = "  ".repeat(_localctx.indent);
		    
		try {
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				((Outer_statementContext)_localctx).declaration_statement = declaration_statement(indent);
				 ((Outer_statementContext)_localctx).code =  TAB + ((Outer_statementContext)_localctx).declaration_statement.code + ";"; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				((Outer_statementContext)_localctx).function_statement = function_statement(indent);
				 ((Outer_statementContext)_localctx).code =  ((Outer_statementContext)_localctx).function_statement.code; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_statementContext extends ParserRuleContext {
		public int indent;
		public String code;
		public Declaration_specifiersContext declaration_specifiers;
		public DeclaratorContext declarator;
		public Statement_listContext statement_list;
		public Declaration_specifiersContext declaration_specifiers() {
			return getRuleContext(Declaration_specifiersContext.class,0);
		}
		public DeclaratorContext declarator() {
			return getRuleContext(DeclaratorContext.class,0);
		}
		public TerminalNode LFIGURE() { return getToken(CppParser.LFIGURE, 0); }
		public Statement_listContext statement_list() {
			return getRuleContext(Statement_listContext.class,0);
		}
		public TerminalNode RFIGURE() { return getToken(CppParser.RFIGURE, 0); }
		public Function_statementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Function_statementContext(ParserRuleContext parent, int invokingState, int indent) {
			super(parent, invokingState);
			this.indent = indent;
		}
		@Override public int getRuleIndex() { return RULE_function_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CppListener ) ((CppListener)listener).enterFunction_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CppListener ) ((CppListener)listener).exitFunction_statement(this);
		}
	}

	public final Function_statementContext function_statement(int indent) throws RecognitionException {
		Function_statementContext _localctx = new Function_statementContext(_ctx, getState(), indent);
		enterRule(_localctx, 6, RULE_function_statement);

		        String TAB = "  ".repeat(_localctx.indent);
		    
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			((Function_statementContext)_localctx).declaration_specifiers = declaration_specifiers(indent);
			setState(112);
			((Function_statementContext)_localctx).declarator = declarator(indent);
			setState(113);
			match(LFIGURE);
			setState(114);
			((Function_statementContext)_localctx).statement_list = statement_list(indent + 1);
			setState(115);
			match(RFIGURE);

			            ((Function_statementContext)_localctx).code =  TAB + ((Function_statementContext)_localctx).declaration_specifiers.code + ' ' + ((Function_statementContext)_localctx).declarator.code + " {\n" + ((Function_statementContext)_localctx).statement_list.code + TAB + '}';
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Statement_listContext extends ParserRuleContext {
		public int indent;
		public String code;
		public StatementContext statement;
		public Statement_listContext statement_list;
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public Statement_listContext statement_list() {
			return getRuleContext(Statement_listContext.class,0);
		}
		public Statement_listContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Statement_listContext(ParserRuleContext parent, int invokingState, int indent) {
			super(parent, invokingState);
			this.indent = indent;
		}
		@Override public int getRuleIndex() { return RULE_statement_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CppListener ) ((CppListener)listener).enterStatement_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CppListener ) ((CppListener)listener).exitStatement_list(this);
		}
	}

	public final Statement_listContext statement_list(int indent) throws RecognitionException {
		Statement_listContext _localctx = new Statement_listContext(_ctx, getState(), indent);
		enterRule(_localctx, 8, RULE_statement_list);

		        ((Statement_listContext)_localctx).code =  "";
		    
		int _la;
		try {
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 158864037587189758L) != 0)) {
					{
					setState(118);
					((Statement_listContext)_localctx).statement = statement(indent, false);
					 ((Statement_listContext)_localctx).code =  ((Statement_listContext)_localctx).statement.code + "\n"; 
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				((Statement_listContext)_localctx).statement = statement(indent, false);
				setState(124);
				((Statement_listContext)_localctx).statement_list = statement_list(indent);
				 ((Statement_listContext)_localctx).code =  ((Statement_listContext)_localctx).statement.code + "\n" + ((Statement_listContext)_localctx).statement_list.code; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public int indent;
		public boolean leftShift;
		public String code;
		public Expression_statementContext expression_statement;
		public Declaration_statementContext declaration_statement;
		public Selection_statementContext selection_statement;
		public Iteration_statementContext iteration_statement;
		public Jump_statementContext jump_statement;
		public Block_statementContext block_statement;
		public Expression_statementContext expression_statement() {
			return getRuleContext(Expression_statementContext.class,0);
		}
		public Declaration_statementContext declaration_statement() {
			return getRuleContext(Declaration_statementContext.class,0);
		}
		public Selection_statementContext selection_statement() {
			return getRuleContext(Selection_statementContext.class,0);
		}
		public Iteration_statementContext iteration_statement() {
			return getRuleContext(Iteration_statementContext.class,0);
		}
		public Jump_statementContext jump_statement() {
			return getRuleContext(Jump_statementContext.class,0);
		}
		public TerminalNode PZAP() { return getToken(CppParser.PZAP, 0); }
		public Block_statementContext block_statement() {
			return getRuleContext(Block_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementContext(ParserRuleContext parent, int invokingState, int indent, boolean leftShift) {
			super(parent, invokingState);
			this.indent = indent;
			this.leftShift = leftShift;
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CppListener ) ((CppListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CppListener ) ((CppListener)listener).exitStatement(this);
		}
	}
